# alg_parallel

./: .gitignore  CMakeLists.txt  README.md  temp.cpp
.cmake/: settings.json
lesson_1/: README.md
lesson_10/: CMakeLists.txt  README.md  start.sh
lesson_10/example_fix/: main.cpp  ul_lesson_10.o210544  ul_lesson_10.o210547  ul_lesson_10.o210563
lesson_10/task_eagle/: main.cpp  ul_lesson_10.o210731
lesson_11/: README.md  start.sh
lesson_11/task_hybrid/: main.cpp  ul_lesson_hybrid.o211475
lesson_2/: README.md  start.sh
lesson_2/task_hw/: hello_world.cpp
lesson_3/: CMakeLists.txt  README.md  start.sh
lesson_3/task_send/: send.cpp  start.sh
lesson_3/task_size_rank/: size_rank.cpp  start.sh
lesson_4/: CMakeLists.txt  README.md  start.sh
lesson_4/task_2/: main.cpp  start.sh
lesson_4/task_pi/: main.cpp  ul_lesson4.o204299
lesson_4/task_send_ring/: main.cpp  ul_lesson4.o203174
lesson_5/: README.md  start.sh
lesson_5/task_gather/: main.cpp  parallel.hpp  result.txt  start.sh  ul_lesson5.e205009  ul_lesson5.e206610
lesson_5/task_pi/: main.cpp  parallel.hpp  pi.hpp  ul_lesson5.o204864
lesson_6/: CMakeLists.txt  README.md  start.sh
lesson_6/task_1/: main.cpp  results.txt
lesson_6/task_2/: 10_results.txt  2_results.txt  6_results.txt  7_results.txt  main.cpp
lesson_7/: CMakeLists.txt  README.md
lesson_7/task_seqteplo/: main.cpp  seqteplo.c  start.sh  ul_lesson_7.o208085
lesson_8/: README.md  start.sh
lesson_8/task_hw/: main.cpp  ul_lesson_8.o208746
lesson_9/: CMakeLists.txt  README.md  start.sh
lesson_9/task_pi/: main.cpp  ul_lesson_9.o209444
lesson_9/task_pi_2/: main.cpp
lesson_9/task_section/: main.cpp  ul_lesson_9.o209379  ul_lesson_9.o209380  ul_lesson_9.o209381  ul_lesson_9.o209382
lesson_9/task_seq_teplo/: main.cpp
lesson_9/task_single/: main.cpp  ul_lesson_9.o209346  ul_lesson_9.o209348  ul_lesson_9.o209349  ul_lesson_9.o209359  ul_lesson_9.o209360  ul_lesson_9.o209361
lesson_template/: start.sh
lesson_template/task_template/: main.cpp
lesson_template_hybrid/: CMakeLists.txt  start.sh
lesson_template_hybrid/task_template/: main.cpp
lesson_template_openmp/: CMakeLists.txt  start.sh
lesson_template_openmp/task_template/: main.cpp
lib/: CMakeLists.txt  README.md  parallel.hpp  parallel_macros.hpp  utils.hpp
semesters/3/parallel/: CMakeLists.txt
semesters/3/parallel/002/: theory.cpp
semesters/3/parallel/002/lesson2/: CMakeLists.txt  lesson2.cpp
semesters/3/parallel/002/lesson_2/: CMakeLists.txt
semesters/3/parallel/003/: theory.cpp  theory.txt
semesters/3/parallel/003/lesson3/: CMakeLists.txt  falt202420_lesson3.o201533  size_rank.cpp
semesters/3/parallel/003/lesson_3/: CMakeLists.txt
semesters/3/parallel/003/lesson_3/send/: send.cpp  start.sh
semesters/3/parallel/003/lesson_3/size_rank/: size_rank.cpp
semesters/3/parallel/lesson_2/: README.md
semesters/3/parallel/lesson_3/: README.md
semesters/3/parallel/lesson_3/size_rank/: start.sh
semesters/3/parallel/lesson_4/: start.sh  tasks.md
semesters/3/parallel/lesson_4/send/: falt202420_lesson3.o201960
semesters/3/parallel/lesson_4/task_1/: main.cpp  start.sh
semesters/3/parallel/lesson_4/task_2/: main.cpp  parallel.hpp  pi.hpp  ul_lesson4.o203491  ul_lesson4.o203636
semesters/3/parallel/lesson_5/task_gather/: main.cpp  ul_lesson5.o205009
semesters/3/parallel/lesson_5/task_pi/: main.cpp  start.sh
